@startuml DERAS_ER_Chen
!theme plain
skinparam shadowing false
skinparam monochrome true
hide circle
left to right direction

' Chen-style conceptual ER (normalized DERAS schema)
' PNG: docs/diagrams/images_final/Figure3_ER_Chen_BW.png

entity "academic_year" as year {
  * id
  --
  name
  start_year
  end_year
  is_current
  is_active
}

entity "township" as town {
  * id
  --
  name
  is_active
}

entity "grade" as grade {
  * id
  --
  name
  is_active
}

entity "book_name" as book {
  * id
  --
  name
  is_active
}

entity "category" as cat {
  * id
  --
  name_mm
  slug
}

entity "grade_book_name" as gbn {
  * id
  --
  grade_id
  book_name_id
  category_id
}

entity "quota" as quota {
  * id
  --
  academic_year_id
  township_id
}

entity "quota_line" as qline {
  * id
  --
  quota_id
  school_level
  ownership
  quantity
}

entity "allocation_plan" as plan {
  * id
  --
  academic_year_id
  grade_id
  book_name_id
  sequence_no
  received_books
  books_per_package
}

entity "allocation_plan_township" as apt {
  * id
  --
  allocation_plan_id
  township_id
  previous
  total_students
  transferable
}

entity "textbook" as tb {
  * id
  --
  academic_year_id
  township_id
  grade_id
  book_name_id
  books_per_set
  student_count
}

entity "stock" as stock {
  * id
  --
  academic_year_id
  township_id
  grade_id
  book_name_id
  previous_balance
  transferred
  required_qty
}

entity "previous_year_balance" as pyb {
  * id
  --
  academic_year_id
  township_id
  grade_id
  book_name_id
  balance
}

entity "teacher_guide" as tg {
  * id
  --
  academic_year_id
  grade_id
  book_name_id
  guide_type
  kg_to_g12_quota
  g1_to_g5_quota
}

entity "teacher_guide_township_allocation" as tgta {
  * id
  --
  teacher_guide_id
  township_id
  kg_to_g12_quantity
  g1_to_g5_quantity
}

entity "teacher_guide_issue" as tgi {
  * id
  --
  teacher_guide_id
  district_unit
  package_unit
}

entity "teacher_guide_issue_township" as tgit {
  * id
  --
  teacher_guide_issue_id
  township_id
  issued_quantity
}

entity "teacher_guide_summary" as tgs {
  * id
  --
  teacher_guide_id
  previous_balance
  fiscal_year_quota
  distributed_books
}

entity "school_supply_item" as ssi {
  * id
  --
  name
  rate
}

entity "school_supply_allocation" as ssa {
  * id
  --
  academic_year_id
  grade_id
  township_id
  school_supply_item_id
  school_count
  quantity
}

entity "supply_item" as si {
  * id
  --
  name
}

entity "supply_detail" as sd {
  * id
  --
  academic_year_id
  township_id
  grade_id
  supply_item_id
  unit
  issued_total
}

entity "school_count" as sc {
  * id
  --
  academic_year_id
  grade_id
  township_id
  school_count
}

entity "company_contact" as cc {
  * id
  --
  company_name
  lot
  responsible_name
  phone
}

entity "role" as role {
  * id
  --
  name
  slug
}

entity "permission" as perm {
  * id
  --
  name
  slug
}

entity "role_permission" as rp {
  * id
  --
  role_id
  permission_id
}

entity "user" as user {
  * id
  --
  name
  email
  role_id
}

year ||--o{ quota : Has
town ||--o{ quota : Has
quota ||--|{ qline : Has

year ||--o{ plan : Has
grade ||--o{ plan : Has
book ||--o{ plan : Has
plan ||--|{ apt : Has
town ||--o{ apt : Has

year ||--o{ tb : Has
town ||--o{ tb : Has
grade ||--o{ tb : Has
book ||--o{ tb : Has

year ||--o{ stock : Has
town ||--o{ stock : Has
grade ||--o{ stock : Has
book ||--o{ stock : Has

year ||--o{ pyb : Has
town ||--o{ pyb : Has
grade ||--o{ pyb : Has
book ||--o{ pyb : Has

year ||--o{ tg : Has
grade ||--o{ tg : Has
book ||--o{ tg : Has
tg ||--|{ tgta : Has
town ||--o{ tgta : Has
tg ||--o{ tgi : Has
year ||--o{ tgi : Has
grade ||--o{ tgi : Has
book ||--o{ tgi : Has
tgi ||--|{ tgit : Has
town ||--o{ tgit : Has
tg ||--o{ tgs : Has
year ||--o{ tgs : Has
grade ||--o{ tgs : Has
book ||--o{ tgs : Has

grade ||--o{ gbn : Has
book ||--o{ gbn : Has
cat ||--o{ gbn : Has

ssi ||--o{ ssa : Has
year ||--o{ ssa : Has
grade ||--o{ ssa : Has
town ||--o{ ssa : Has

si ||--o{ sd : Has
year ||--o{ sd : Has
town ||--o{ sd : Has
grade ||--o{ sd : Has

year ||--o{ sc : Has
grade ||--o{ sc : Has
town ||--o{ sc : Has

role ||--o{ rp : Has
perm ||--o{ rp : Has
role ||--o{ user : Has

@enduml
